    operator to zero to not leak uninitialized data from the stack if
    not set by %P. (Miroslav Lichvar)
14. modules/fcntl-module.c: Added fcntl_getpipe_sz and
    fcntl_setpipe_sz functions to get and set the buffer size for pipes
15. src/sltoken.c, modules/json-module.c: Added UTF-16 surrogate handling to the
    expand_escaped_string function and json module

{{{ Previous Versions

Changes since 2.3.2
1. src/slposdir.c: stat_file now support open file descriptors, in
   addition to filenames.
2. src/sltoken.c: Ignore the \r character in multiline strings that
   appear to have CRLF line terminators.  (Manfred Hanke)
3. *.tm: minor documentation updates
4. src/slang.h: SLANG_VERSION_STRING was missing the "pre" prefix.
5. src/sltermin.c: Added support for TERMINFO_DIRS (based upon a patch
   forwarded by Jörg Thalheim)
6. src/slarray.c: src/slarray.c: some integer overflow checks were
   resulting undefined behavior (reported by Sergey)
7. modules/csv.sl: Strip leading/trailing whitespace from column names
8. src/slsmg.c,sldisply.c: Removed static buffers with sizes dependent
   upon SLTT_MAX_SCREEN_ROWS/COLS in favor of dynamically allocated
   ones.
9. modules/chksum-module: added CRC-8,16,32 checksums to the chksum module
10. modules/csv.sl: An error message in the form of a dollar-string
    was not marked as such.
11. modules/csv.sl: Added support for empty CSV files
12. src/sltime.c: The timegm function will ignore the tm_wday and
    tm_yday fields, and instead use the tm_mon and tm_mday fields.
13. modules/mkfiles/makefile.all:  Added a target for chksum_crc.o for
    win32/64 platforms (see change #9)
14. modules/chksum-module.c: The memset function was used with the
    wrong structure size causing a buffer overflow on 32 bit systems.
15. src/terminfo/parsecaps.sl: Tweaked an auto-generated comment
    produced by parsecaps.sl to produce a more deterministic build
    (Ian Rogers).
16. src/slarray.c: Changed two instances of index errors to throw an