@@ -1,7 +1,0 @@
-# slang - master branch
-
-This repository contains the frozen state of the repository.
-Its history is cleared. It is used only for static code
-analysis with Codacy.
-
-Commit Time: 1729831753
