@@ -23,7 +23,7 @@ USA.
 */
 
 #define SLANG_VERSION 20304
-#define SLANG_VERSION_STRING "pre2.3.4-15"
+#define SLANG_VERSION_STRING "pre2.3.4-20"
 /* #ifdef __DATE__ */
 /* # define SLANG_VERSION_STRING SLANG_VERSION_STRING0 " " __DATE__ */
 /* #else */
